# FFmpeg

./: .gitignore  0000-ffmpeg-fdk-acc-free.patch  CHANGELOG.md  README.md  build-ubuntu.sh  build.sh  download.pl  pyproject.toml  setup-dependencies.sh  setup-ubuntu.sh
.github/actions/build-wheel/: action.yml
.github/workflows/: build-android_aarch64.yml  build-android_armv7a.yml  build-android_i686.yml  build-android_x86_64.yml  build-darwin_aarch64.yml  build-darwin_x86_64.yml  build-linux_aarch64.yml  build-linux_armhf.yml  build-linux_armv7l.yml  build-linux_i686.yml  build-linux_riscv64.yml  build-linux_x86_64.yml  build-macosx_10_9_x86_64.yml  build-macosx_11_0_arm64.yml  build-macosx_12_0_x86_64.yml  build-macosx_12_7_x86_64.yml  build-macosx_13_0_arm64.yml  build-macosx_14_0_arm64.yml  build-macosx_14_7_arm64.yml  build-manylinux2010_i686.yml  build-manylinux2010_x86_64.yml  build-manylinux2014_aarch64.yml  build-manylinux2014_armv7l.yml  build-musllinux2010_i686.yml  build-musllinux2010_x86_64.yml  build-musllinux2014_aarch64.yml  build-musllinux2014_armv7l.yml  build-musllinux_1_0_aarch64.yml  build-musllinux_1_0_armv7l.yml  build-musllinux_1_0_i686.yml  build-musllinux_1_0_x86_64.yml  build-musllinux_1_1_i686.yml  build-musllinux_1_1_x86_64.yml  build-musllinux_1_2_aarch64.yml  build-win32.yml  build-win_amd64.yml  build-win_arm64.yml  build-windows_aarch64.yml  build-windows_i686.yml  build-windows_x86_64.yml  (+3 more)
