[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Xdcheckin-FFmpeg"
version = "1.0.7"
authors = [{name = "Pairman", email = "pairmanxlr@gmail.com"}]
readme = "README.md"
description = "Minimal static FFmpeg with h.264 for Xdcheckin."
license = {text = "BSD-2-Clause"}
keywords = ["xdcheckin", "video", "livestream", "ffmpeg"]
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: BSD License"
]
requires-python = ">=3.5"

[project.urls]
Homepage = "https://github.com/Pairman/Xdcheckin-FFmpeg"
Changelog = "https://github.com/Pairman/Xdcheckin-FFmpeg/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["xdcheckin_ffmpeg*", "xdcheckin_ffmpeg.bin*"]

[tool.setuptools.package-data]
"xdcheckin_ffmpeg.bin" = ["ffmpeg*"]
